# difr-expt

./: .gitignore  pyproject.toml
docs/plans/: fp-emulation-published-teachers.md  int-emulates-float-execution.md
experiments/baseline-int-cast/: EXPERIMENT_LOG.md  plan.md
experiments/baseline-int-cast/data/: llama31_8b_b16_mmbf16.json  llama31_8b_b16_mmbf16_flin.json  llama31_8b_b18_mmbf16_flin.json  llama31_8b_b20_grp16_both.json  llama31_8b_b20_grp8_both.json  llama31_8b_b20_mmbf16_flin.json  llama31_8b_b20_sq_a05.json  llama31_8b_b22_mmbf16_flin.json  llama31_8b_b24_asym.json  llama31_8b_b24_clip999.json  llama31_8b_b24_clip9999.json  llama31_8b_b24_grp128_sym.json  llama31_8b_b24_grp16_both.json  llama31_8b_b24_grp32_sq05.json  llama31_8b_b24_grp32_sym.json  (+140 more)
experiments/fp-emulation/: EXPERIMENT_LOG.md  plan.md
experiments/fp4-emulation/: EXPERIMENT_LOG.md  plan.md
experiments/int-emulates-fp/: EXPERIMENT_LOG.md
experiments/int-residual/: EXPERIMENT_LOG.md  ITERATION_LOG.md  plan.md
experiments/int-vs-fp8-ref/: EXPERIMENT_LOG.md  plan.md
experiments/layer-harness/: EXPERIMENT_LOG.md  plan.md
experiments/train-int-cast/: EXPERIMENT_LOG.md  plan.md
experiments/train-nonmatmul-int/: EXPERIMENT_LOG.md  plan.md
src/difr_expt/: cache_prompts.py  fp8_hw_linear.py  fp_quant.py  harness_attn_wrap.py  int_cast.py  int_ops.py  int_ops_bitexact.py  metrics.py  patch_hf_model.py  run_baseline.py  run_harness.py  train.py  train_emulate.py  train_nonmatmul.py
tests/: test_int_cast.py  test_int_ops.py  test_metrics.py  test_train_step.py
(+241 files in other folders)
