[project]
name = "difr-expt"
version = "0.0.1"
description = "Int-cast vs float DiFR baseline experiments"
requires-python = ">=3.10"

dependencies = [
    "torch==2.7.1",
    "transformers==4.57.3",
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "safetensors>=0.5.3",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
gpu = [
    "vllm==0.10.1",
    "xformers",
    "bitsandbytes==0.46.1",
]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
environments = [
    "implementation_name == 'cpython' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
